fix encoding by urllib2

--- a/web/log.html
+++ b/web/log.html
@@ -1,8 +1,8 @@
 <tr>
 <td class="acenter"><a href="/data/bond/detail/122800" target="_blank">122800</a></td>
-<td class="acenter nowrap" title="åè¡äºº:é¾å£ç¤çµæéå¬å¸">11é¾ç¤çµ <span style="color:#FFA500;" title="åæ ¼æèµèå¯ä¹°"><sup>Q</sup></span></td>
-<td title="æåæ´æ°æ¶é´:15:02:40">94.120</td>
-<td title="åºè®¡æ¯ï¼2.956">97.076</td>
+<td class="acenter nowrap" title="发行人:龙口煤电有限公司">11龙煤电 <span style="color:#FFA500;" title="合格投资者可买"><sup>Q</sup></span></td>
+<td title="最后更新时间:15:02:40">94.120</td>
+<td title="应计息：2.956">97.076</td>
 <td class=" green">-0.25%</td>
 <td>154.56</td>
 <td>193</td>
@@ -11,15 +11,15 @@
 <td class="aleft" ytm="18.51">18.51/<font size="-2">8.85%</font></td>
 <td class="aleft" ytm="15.91">15.91/<font size="-2">7.29%</font></td>
 <td>6.20</td>
-<td title="æææï¼-">0.00</td>
+<td title="有效期：-">0.00</td>
 <td>0.0%</td>
 <td class="aleft">AA-</td>
-<td class="aleft" title="å±æï¼è´é¢">A+</td>
-<td class="aleft" title="æä¿:è´£ä»»äººæä¿"><div class="wfixed" style="width:6em">è´£ä»»äººæä¿</div></td>
-<td class="acenter" nowrap>2018-06-17</td>
-<td title="åå§è§æ¨¡ï¼10.00äº¿å">10.00</td>
-<td class="acenter green">ç</td>
-<td class="acenter red">äº</td>
-<td class="aleft" title="å¤æ³¨:5+2"><div class="wfixed" style="width:3em">5+2</div></td>
-<td class="acenter" id="bondOptTd122800" title="å ã11é¾ç¤çµãä¸ºèªéåº"><a class="jsl_icon_plus" href="javascript:addOwnedBond('122800','11é¾ç¤çµ');">   </a></td>
+<td class="aleft" title="展望：负面">A+</td>
+<td class="aleft" title="担保:责任人担保"><div class="wfixed" style="width:6em">责任人担保</div></td>
+<td class="acenter" nowrap="">2018-06-17</td>
+<td title="初始规模：10.00亿元">10.00</td>
+<td class="acenter green">盈</td>
+<td class="acenter red">亏</td>
+<td class="aleft" title="备注:5+2"><div class="wfixed" style="width:3em">5+2</div></td>
+<td class="acenter" id="bondOptTd122800" title="加【11龙煤电】为自选债"><a class="jsl_icon_plus" href="javascript:addOwnedBond('122800','11龙煤电');">   </a></td>
 </tr>
