--- a/jisi/log.html
+++ b/jisi/log.html
@@ -1,2 +1,8 @@
-2015-12-20 04:58:06.854233
-Bond name: 124216, Bond profit: 9.2;
+2015-12-20 20:48:13.722899
+<br>Bond name: 124216, Bond profit: 9.2;
+<br>The highest bond profit is: 9.2%<br>2015-12-20 20:49:02.679567
+<br>Bond name: 124216, Bond profit: 9.2;
+<br>The highest bond profit is: 9.2%<br>2015-12-20 20:49:31.553496
+<br>Bond name: 124216, Bond profit: 9.2;
+<br>Bond name: 122213, Bond profit: 8.7;
+<br>The highest bond profit is: 9.2%<br>
