--- a/jisi2/template.html
+++ b/jisi2/template.html
@@ -78,6 +78,14 @@
 						bk_pg6
 					</p>
 				</div>
+				<div class="span4">
+					<h3>
+						bk_title7
+					</h3>
+					<p>
+						bk_pg7
+					</p>
+				</div>
 				
 			</div>
 		</div>
